--- a/index.css
+++ b/index.css
@@ -41,6 +41,10 @@ h4{
     padding-bottom: 2%;
 }
 
+#sort_row{
+    padding-top:6%;
+}
+
 .legendLabel{
     padding-top:0.5%;
     padding-bottom:0.5%;
@@ -72,9 +76,13 @@ h1,h2{
 #visual_container{
     display: inline-block;
     float:right;
-    padding-top:4%;
+    padding-top:1%;
     padding-bottom: 4%;
     width: 100%;
+}
+
+#ALPH{
+
 }
 
 .LABEL{
